--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Event Planner</title>
-    <script src="node_modules/react/dist/react.js"></script>
-    <script src="node_modules/react-dom/dist/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="lib/react/react.js"></script>
+    <script src="lib/react/react-dom.js"></script>
   </head>
 
   <body>
@@ -13,7 +13,7 @@
   <div id="example">
   </div>    
 
-    <script src="bundle.js"></script>
+    <script type="text/babel" src="main.js"></script>
   </body>
 
 
