Signin component can make post req

--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="lib/react/react.js"></script>
     <script src="lib/react/react-dom.js"></script>
+    <script src="lib/axios/dist/axios.js"></script>
   </head>
 
   <body>
 
   <div id="example">
-  </div>    
+  </div>
 
+    <script type="text/babel" src="components/signin.js"></script>
     <script type="text/babel" src="main.js"></script>
   </body>
 
