--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
 
   <div id="app"></div>    
     <script type="text/babel" src="components/signin.js"></script>
+    <script type="text/babel" src="components/signup.js"></script>
     <script type="text/babel" src="/components/events/event.js"></script>
     <script type="text/babel" src="/main.js"></script>
 
