Update index.html page

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,12 @@
 
   <body>
 
-  <div id="app"></div>    
+  <div id="app"></div>
+    <script type="text/babel" src="/components/users/user.js"></script>
+    <script type="text/babel" src="/components/users/createEventButton.js"></script>
+    <script type="text/babel" src="/components/users/addEventForm.js"></script>
+    <script type="text/babel" src="/components/users/listOfEvents.js"></script>    
+    <script type="text/babel" src="/components/users/Event.js"></script>  
     <script type="text/babel" src="components/signin.js"></script>
     <script type="text/babel" src="components/signup.js"></script>
     <script type="text/babel" src="/components/events/event.js"></script>
