--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <script src="lib/react/react.js"></script>
     <script src="lib/react/react-dom.js"></script>
     <script src="lib/axios/dist/axios.js"></script>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
     <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
   </head>
 
