--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Event Planner</title>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="/lib/react/react.js"></script>
     <script src="/lib/react/react-dom.js"></script>
@@ -30,6 +31,7 @@
     <script type="text/babel" src="/components/users/Event.js"></script>  
     <script type="text/babel" src="/components/signin.js"></script>
     <script type="text/babel" src="/components/signup.js"></script>
+    <script type="text/babel" src="/components/events/map.js"></script>
     <script type="text/babel" src="/components/events/event.js"></script>
     <script type="text/babel" src="/main.js"></script>
 
