--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,6 @@
     <script src="/lib/react/react-dom.js"></script>
     <script src="/lib/axios/dist/axios.js"></script>
     <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
-    <script src="lib/axios/dist/axios.js"></script>
     <script src="lib/jquery/dist/jquery.min.js"></script>
 
     <!--Import Google Icon Font-->
@@ -29,8 +28,8 @@
     <script type="text/babel" src="/components/users/addEventForm.js"></script>
     <script type="text/babel" src="/components/users/listOfEvents.js"></script>    
     <script type="text/babel" src="/components/users/Event.js"></script>  
-    <script type="text/babel" src="/components/signin.js"></script>
-    <script type="text/babel" src="/components/signup.js"></script>
+<!--     <script type="text/babel" src="/components/signin.js"></script>
+    <script type="text/babel" src="/components/signup.js"></script> -->
     <script type="text/babel" src="/components/events/map.js"></script>
     <script type="text/babel" src="/components/events/event.js"></script>
     <script type="text/babel" src="/main.js"></script>
