--- a/client/index.html
+++ b/client/index.html
@@ -7,15 +7,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="/lib/react/react.js"></script>
     <script src="/lib/react/react-dom.js"></script>
-    <script src="/lib/axios/dist/axios.js"></script>
     <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
-    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="/lib/axios/dist/axios.js"></script>
+    <script src="/lib/jquery/dist/jquery.min.js"></script>
 
     <!--Import Google Icon Font-->
     <!-- <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <!--Import materialize.css-->
-    <!-- <link type="text/css" rel="stylesheet" href="styles/materialize.min.css" media="screen,projection"/> -->
-    <!-- <script type="text/javascript" src="styles/materialize.min.js"></script> -->
+    <!-- <link type="text/css" rel="stylesheet" href="/styles/materialize.min.css" media="screen,projection"/> -->
+    <!-- <script type="text/javascript" src="/styles/materialize.min.js"></script> -->
     <!--Let browser know website is optimized for mobile-->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
   </head>
@@ -23,13 +23,14 @@
   <body>
 
   <div id="app"></div>
-    <script type="text/babel" src="/components/users/user.js"></script>
+    <script type="text/babel" src="/components/users/UserProfile.js"></script>
     <script type="text/babel" src="/components/users/createEventButton.js"></script>
     <script type="text/babel" src="/components/users/addEventForm.js"></script>
     <script type="text/babel" src="/components/users/listOfEvents.js"></script>    
-    <script type="text/babel" src="/components/users/Event.js"></script>  
+    <script type="text/babel" src="/components/events/EventPage.js"></script>  
     <script type="text/babel" src="/components/events/map.js"></script>
-    <script type="text/babel" src="/components/events/event.js"></script>
+    <script type="text/babel" src="/components/events/ItineraryEntry.js"></script>
+    <script type="text/babel" src="/components/events/Itinerary.js"></script>
     <script type="text/babel" src="/main.js"></script>
 
   </body>
