Add some styles to make side bar

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
     <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
     <script src="/lib/axios/dist/axios.js"></script>
     <script src="/lib/jquery/dist/jquery.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 
     <!--Import Google Icon Font-->
     <!-- <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
@@ -26,7 +28,8 @@
     <script type="text/babel" src="/components/users/UserProfile.js"></script>
     <script type="text/babel" src="/components/users/createEventButton.js"></script>
     <script type="text/babel" src="/components/users/addEventForm.js"></script>
-    <script type="text/babel" src="/components/users/listOfEvents.js"></script>    
+    <script type="text/babel" src="/components/users/listOfEvents.js"></script>
+    <script type="text/babel" src="/components/users/Event.js"></script>   
     <script type="text/babel" src="/components/events/EventPage.js"></script>  
     <script type="text/babel" src="/components/events/map.js"></script>
     <script type="text/babel" src="/components/events/ItineraryEntry.js"></script>
