--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Event Planner</title>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+<!--     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="/lib/react/react.js"></script>
     <script src="/lib/react/react-dom.js"></script>
@@ -11,7 +11,7 @@
     <script src="/lib/axios/dist/axios.js"></script>
     <script src="/lib/jquery/dist/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles/styles.css"> -->
 
     <!--Import Google Icon Font-->
     <!-- <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
@@ -25,16 +25,16 @@
   <body>
 
   <div id="app"></div>
-    <script type="text/babel" src="/components/users/UserProfile.js"></script>
-    <script type="text/babel" src="/components/users/createEventButton.js"></script>
-    <script type="text/babel" src="/components/users/addEventForm.js"></script>
-    <script type="text/babel" src="/components/users/listOfEvents.js"></script>
+<!--     <script type="text/babel" src="/components/users/UserProfile.js"></script>
+    <script type="text/babel" src="/components/users/CreateEventButton.js"></script>
+    <script type="text/babel" src="/components/users/AddEventForm.js"></script>
+    <script type="text/babel" src="/components/users/ListOfEvents.js"></script>
     <script type="text/babel" src="/components/users/Event.js"></script>   
     <script type="text/babel" src="/components/events/EventPage.js"></script>  
-    <script type="text/babel" src="/components/events/map.js"></script>
+    <script type="text/babel" src="/components/events/Map.js"></script>
     <script type="text/babel" src="/components/events/ItineraryEntry.js"></script>
     <script type="text/babel" src="/components/events/Itinerary.js"></script>
-    <script type="text/babel" src="/main.js"></script>
+    <script type="text/babel" src="/main.js"></script> -->
 
   </body>
 
