--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8"/>
     <title>Event Planner</title>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="/dist/lib/jquery/dist/jquery.js"></script>
+    <link rel="stylesheet" href="/dist/lib/Materialize/dist/css/materialize.css">
+    <script src="/dist/lib/Materialize/dist/js/materialize.js"></script>
     <link rel="stylesheet" type="text/css" href="/../client/styles/styles.css">
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script> -->
-    <!-- <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'> -->
-    <!--Import Google Icon Font-->
-    <!-- <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <!--Import materialize.css-->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css"></script> -->
-    <!-- Let browser know website is optimized for mobile -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  -->
   </head>
 
   <body>
