Add styling to user page

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/dist/lib/Materialize/dist/css/materialize.css">
     <script src="/dist/lib/Materialize/dist/js/materialize.js"></script>
     <link rel="stylesheet" type="text/css" href="/../client/styles/styles.css">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
   <body>
