--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8"/>
     <title>Event Planner</title>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script src="/dist/lib/jquery/dist/jquery.js"></script>
-    <link rel="stylesheet" href="/dist/lib/Materialize/dist/css/materialize.css">
-    <script src="/dist/lib/Materialize/dist/js/materialize.js"></script>
-    <link rel="stylesheet" type="text/css" href="/../client/styles/styles.css">
+    <script src="/lib/jquery/dist/jquery.js"></script>
+    <link rel="stylesheet" href="/lib/Materialize/dist/css/materialize.css">
+    <script src="/lib/Materialize/dist/js/materialize.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
